[package]
name = "winapps-cli"
version = "0.1.0"
edition = "2024"
default-run = "winapps-cli"

[dependencies]
clap = "4.3"
inquire = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
miette = { version = "7.2.0", features = ["fancy"] }
winapps.workspace = true
