[package]
name = "winapps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
derive-new = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
dirs = "6.0.0"
miette = "7.2.0"
thiserror = "2.0.9"
enum_dispatch = "0.3.13"
base64 = "0.22.1"
regex = "1.11.2"
