[package]
name = "winapps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive-new = "0.7.0"
home = "0.5.5"
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "2.0.0"
toml = "1.0.0"
tracing = "0.1.37"
